kubernetes/apps/base/network/envoy-gateway/gateway/internal/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal.${DOMAIN}
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 10.1.7.202
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: internal-proxy-config
  listeners:
    - name: ${DOMAIN}-http
      protocol: HTTP
      port: 80
      hostname: "*.${DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
    - name: ${DOMAIN}-https
      protocol: HTTPS
      port: 443
      hostname: "*.${DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${DOMAIN}-tls
    - name: openttd-udp
      protocol: UDP
      port: 3979
      allowedRoutes:
        namespaces:
          from: All
    - name: openttd-tcp
      protocol: TCP
      port: 3979
      allowedRoutes:
        namespaces:
          from: All
